--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   gateway:
     build: ./gateway
@@ -8,27 +9,34 @@ services:
     command: pnpm run start:dev
     environment:
       - PORT=3000
+
   user_microservice:
     build: ./user-microservice
     volumes:
       - ./user-microservice/src:/usr/src/app/src
     command: pnpm run start:dev
+    depends_on:
+      - mysql_db # Ensures MySQL starts before this service
+
   payment_microservice:
     build: ./payment-microservice
     volumes:
       - ./payment-microservice/src:/usr/src/app/src
     command: pnpm run start:dev
+    depends_on:
+      - mysql_db # Ensures MySQL starts before this service
+
   nats:
     image: nats
     ports:
       - 4222:4222
+
   mysql_db:
     image: mysql
     ports:
-      - "3307:3307"
+      - "3307:3306" # Host port:Container port
     environment:
       - MYSQL_ROOT_PASSWORD=root_password_123
       - MYSQL_DATABASE=nestjs_db
       - MYSQL_USER=testuser
       - MYSQL_PASSWORD=testuser123
-      - MYSQL_TCP_PORT=3307
