--- a/payment-microservice/package.json
+++ b/payment-microservice/package.json
@@ -25,9 +25,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.4",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "mysql2": "^3.11.3",
     "nats": "^2.28.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
