--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway",
+  "name": "auth-microservice",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,21 +25,20 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.4",
-    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
     "mysql2": "^3.11.3",
     "nats": "^2.28.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
