--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -23,12 +23,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.4.4",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "mysql2": "^3.11.3",
+    "dotenv": "^16.4.5",
     "nats": "^2.28.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -51,7 +53,10 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
+    "dotenv": "^16.4.5",
     "supertest": "^7.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
